--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -43,6 +43,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .air-bg {background-repeat:no-repeat;background-position:center center;background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-attachment: fixed;}
 
 .container {width: 1170px !important;}
+.right-body {padding-top: 30px;}
 
 .btn-ghost {border:1px solid;background: transparent;}
 .btn-ghost:hover {background: #fff;background: rgba(255,255,255,0.7);}
@@ -59,14 +60,12 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .aside-toggle.animate .move-bars>li:nth-child(3) {transform:rotate(-45deg);transform-origin: center;transition:all 0.2s ease-in-out;}
 
 .header-nav {background: #fff;border-bottom: 1px solid #19B5FE;min-width: 1170px;}
-.header-nav .navbar-brand {color: #19B5FE;}
+.header-nav .navbar-brand {color: #19B5FE;font-family: 'open_sanslight';text-transform: uppercase;}
 .header-nav * a {color: #19B5FE}
 .header-nav .no-btn {color: #fff;font-size: 16px;}
 
 .header-links>li {display: inline-block;float: left;}
-.aside-bar {width: 210px;height: 100%;position: fixed;left: 0;top: 0;padding-top: 60px;transition:all 0.3s ease-in-out;z-index: 100;background: #fff;}
-
-.side-wrapper .right-body {margin-left: 0;transition:all 0.25s ease-in-out;}
+.aside-bar {width: 210px;height: 100%;position: fixed;left: 0;top: 0;padding-top: 60px;transition:all 0.3s ease-in-out;z-index: 1001;background: #fff;}
 
 .side-wrapper.active .aside-bar {left: -210px;}
 
@@ -75,7 +74,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .aside-menu:first-child>a,.aside-menu:last-child>a{border-radius: 0}
 
 .home-search-tabs {margin: 150px 0;}
-.home-search-tabs .tab-content {background-color:#fff;background-color: rgba(255,255,255,0.9);border-radius: 4px;border:1px solid #fff  ;border:1px solid rgba(255,255,255,0.7);box-shadow:0 0 4px 0px rgba(1px,1px,0,0.4);}
+.home-search-tabs .tab-content {background-color:#fff;background-color: rgba(255,255,255,0.9);border-radius: 3px;border:1px solid #fff;border:1px solid rgba(255,255,255,0.7);box-shadow:0 0 4px 0px rgba(1px,1px,0,0.4);padding: 0}
 .panel-tabs {padding-left: 30px;background-color: transparent;}
 .panel-tabs>li>a {padding-left: 35px;padding-right: 35px;background-color: #fff;color: #19B5FE;}
 .panel-tabs>li:last-child>a {border-top-right-radius: 4px;}
@@ -83,10 +82,18 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .panel-tabs>li.active>a, .panel-tabs>li.active>a:focus,.panel-tabs>li.active>a:hover, .panel-tabs>li.active>a:active {background-color:#4FC1E9 !important;color: #fff;}
 
 .search-list {padding:10px 50px;}
+.search-item label {text-transform: uppercase;font-family: 'open_sansbold';}
 .search-list .search-item:not(:first-child) label {display: none;}
 
+
+.search-item {position: relative;}
+.flow-remove {position: absolute;right: 0;margin-right: -20px;top: 0;}
+.flow-remove>.btn {border-radius: 50%;padding: 4px 9px;}
+
+.search-list .search-item:first-child .flow-remove {display: none;}
+
 /************** =footer *********/
-.main-footer {min-height: 180px;position: absolute;bottom: 0;width: 100%;background-color: #19B5FE;border-top: 1px solid #d8f2fe;}
+.main-footer {min-height: 180px;position: absolute;bottom: 0;width: 100%;background-color: #19B5FE;border-top: 1px solid #eee;}
 .main-footer li>a:hover {text-decoration: underline;}
 .main-footer h6 {color: #373737;border-bottom: 1px solid #19B5FE;padding-bottom: 6px;padding-left: 4px;}
 .main-footer ul {list-style-type: none;margin: 0;padding: 0 4px;}
@@ -101,17 +108,55 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .link-bar-seperator li+li:before {content: '|';color: #fff;padding-right: 12px;}
 
 /**************  =page styles *********/
-.page-title {color: #19B5FE;font-family: 'open_sanslight',Helvetica,Arial,Sans-serif;border-bottom: 1px solid #19B5FE;padding-bottom: 12px;font-size: 24px;}
+.page-title {color: #19B5FE;font-family: 'open_sanslight';border-bottom: 1px solid #19B5FE;padding-bottom: 12px;font-size: 24px;margin-top: 0;}
 
 .sign-up-form {margin:30px 0 50px;}
 .sign-up-form .form-group {margin-bottom: 10px;}
 .sign-up-form .form-group label.control-label{text-align: left;}
 
+.header-margin {margin-top: 30px;}
+
+.frmto-drpdn {width: 180px;margin-top: 20px;}
+.frmto-drpdn>.btn {width: 100%;padding: 4px;border-radius: 0;}
+.frmto-drpdn .dropdown-menu {background:transparent;color: #fff;padding: 0 !important;min-width: 200px;}
+.frmto-drpdn .dropdown-menu>li {border-bottom: 1px solid #ddd;}
+.frmto-drpdn .dropdown-menu li a {padding:8px 10px;font-size: 12px;font-family: 'open_sanslight';color: #000 !important;border:#f8f8f8;background: #fefefe}
+.frmto-drpdn .dropdown-menu li a:hover {background:#d8f2fe;}
+.frmto-drpdn .frmto-count {float: right;margin-right: 10px;}
+.loc-item .loc-pos {width: 80px;display: inline-block;float: left;}
+.loc-item .btn {border-radius: 50%;width: 20px;height: 20px;padding: 0;}
+
+
+.order-sort>li {margin-bottom: 4px}
+.result-heading {padding: 5px 10px 1px;border-radius: 0}
+.order-label-heading>li {text-align: center;}
+.order-label-heading>li>span {display: block;}
+.order-label-heading .ol-lab {font-family: 'open_sansregular';text-transform: uppercase;}
+.order-label-heading .ol-val {border:1px solid #d7d7d7;background:#fff;padding: 3px 0;}
+
+
+.rlist-wrapper {margin-bottom: 30px;}
+.rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #fff;list-style-type: none;border:1px solid #ddd;box-shadow:0 1px 2px rgba(0,0,0,.2);webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2)}
+.rlist-headings>li {width: auto;display: inline-block;float: left;color: #000;}
+.result-item {width: 100%;margin: 0;padding: 10px;display: block;overflow: hidden;list-style-type: none;border:1px solid #ddd;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2)}
+.result-item>.rb-item {display: inline-block;float: left;width: auto;}
+
+.rlist-headings>li:nth-child(1),.result-item>.rb-name {width:19%;padding: 0 0.8%;}
+.rlist-headings>li:nth-child(2),.result-item>.rb-rating {width:15%}
+.rlist-headings>li:nth-child(3),.result-item>.rb-coff {width:14%}
+.rlist-headings>li:nth-child(4),.result-item>.rb-del {width:14%}
+.rlist-headings>li:nth-child(5),.result-item>.rb-day {width:10%}
+.rlist-headings>li:nth-child(6),.result-item>.rb-aip {width:14%}
+.rlist-headings>li:nth-child(7),.result-item>.rb-buk {width:14%}
+
+.result-item>.rb-buk>.btn {width: 100%;}
+.result-item>.rb-name img {width: auto;max-width: 100%;height: auto;max-height: 50px;display: block;margin-left: auto;margin-right: auto;}
+
 /**************  =pluggins ************/
 .datepicker {z-index: 1050 !important}
 .input-group.date .input-group-addon {cursor: pointer;}
 
-.selecter .selecter-selected {border-radius: 0;border-color: #96deff;height: 32px;}
+.selecter .selecter-selected {border-radius: 0;border-color: #96deff;height: 32px;color: }
 
 /*************** =bootstrap ****************/
 .clean-modal .modal-dialog {margin-top: 120px;}
@@ -128,14 +173,29 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 label {font-weight: normal;}
 
 body.modal-open {overflow-y:visible}
+span.block,.show {display: block;}
+.hide {display: none;}
+
+.tooltip .tooltip-inner{border-radius: 1px;}
+
+/***************** =CSS cases *******************/
+
+.login-form.forgot-form .lf-row {display: none;}
+.help-text.lf-row {display: none;}
+.login-form.forgot-form .help-text.lf-row {display: block;}
+
+
 
 /************** =Global ****************/
 a,.blue-text {color: #19B5FE}
+.lblue {color: #d8f2fe}
 
+.test {border:1px solid #000;}
 
 .text-xs {font-size: 10px;}
 .seperator-5 {margin-top: 5px;}
 .seperator-10 {margin-top: 10px;}
+.seperator-15 {margin-top: 15px;}
 .seperator-20 {margin-top: 20px;}
 .seperator-25 {margin-top: 25px;}
 .seperator-30 {margin-top: 30px;}
@@ -151,4 +211,10 @@ h1,h2,h3,h4,h5,h6,strong,b {font-weight: normal;}
 
 .no-overflow {overflow: hidden;}
 
-.multi-select {width: 250px}
+
+
+/*******
+
+company log - 143 x 43 px
+
+********************/
