--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -21,7 +21,7 @@
                               <label for="frm-search">
                                 From
                               </label>
-                              <%= country_select( "user", "source", {selected: session['search']['source']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][source]"}) %>
+                              <%= country_select( "user", "source", {selected: session['search']['source']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][source]", required: 'required'}) %>
                             </div>
                           </div>
                           <div class="col-xs-3">
@@ -29,7 +29,7 @@
                               <label for="to-search">
                                 To
                               </label>
-                              <%= country_select( "user", "destination", {selected: session['search']['destination']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][destination]"}) %>
+                              <%= country_select( "user", "destination", {selected: session['search']['destination']}, { class: 'form-control selecter', placeholder: "Source", id: "frm-search", name: "search[][destination]", required: 'required'}) %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -38,7 +38,7 @@
                                 Date
                               </label>
                               <div class="input-group date">
-                              <%= text_field_tag "search[][date]", session['search']['date'], class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
+                              <%= text_field_tag "search[][date]", session['search']['date'], class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -50,7 +50,7 @@
                               <label for="hm-cbm">
                                 Cbm
                               </label>
-                              <%= text_field_tag "search[][cbm]", session['search']['cbm'], class: "form-control", id: "hm-cbm", placeholder: "Cbm" %>
+                              <%= text_field_tag "search[][cbm]", session['search']['cbm'], class: "form-control", id: "hm-cbm", placeholder: "Cbm", required: 'required' %>
                             </div>
                           </div>
                           <div class="col-xs-2">
@@ -58,8 +58,11 @@
                               <label for="hm-weight">
                                 Kg
                               </label>
-                              <%= text_field_tag "search[][weight]", session['search']['weight'], class: "form-control", id: "hm-weight", placeholder: "Weight" %>
+                              <%= text_field_tag "search[][weight]", session['search']['weight'], class: "form-control", id: "hm-weight", placeholder: "Weight", required: 'required' %>
                             </div>
+                            <div class="flow-remove">
+                              <button type="button" class="btn btn-danger btn-remove">X</button>
+                            </div>                            
                           </div>
                         </div>
                       </div>
@@ -69,7 +72,7 @@
 
                     </div>
                   </div>
-                  <div class="form-group text-center seperator-20">
+                  <div class="form-group text-center">
                     <%= submit_tag 'Search', id: "home-search", class: "btn btn-primary" %>
                   </div>
                 <%end%>
