--- a/app/views/bookings/get_quote.html.erb
+++ b/app/views/bookings/get_quote.html.erb
@@ -1,11 +1,127 @@
-<table style="width:100%">
-  <% @freight_rates.each do |freight_rate| %>
-    <tr>
-      <td><%= freight_rate.source %></td>
-      <td><%= freight_rate.destination%></td>
-      <td><%= freight_rate.min_weight%></td>
-      <td><%= freight_rate.max_weight %></td>
-      <td><%= link_to 'Book now', new_address_book_path(:booking_id => @draft_booking.id) %></td>
-    </tr>
-  <% end%>
-</table>
+<div class="result-page">
+  <div class="panel result-heading">
+      <div class="row">
+        <div class="col-xs-2">
+          <div class="btn-group frmto-drpdn">
+            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"><i class="fa fa-map-marker"></i> From - To <span class="caret"></span> <span class="frmto-count">(<%= session['bookind_ids'].present? ? session['bookind_ids'].count : 1 %>)</span></button>
+            <ul class="dropdown-menu" role="menu">
+            <% (session['bookind_ids'] || [@draft_booking.id]).each do |booking_id| %>
+              <% booking = Booking.find(booking_id)%>
+              <li class="loc-item">
+                <%= link_to  get_quote_booking_path(id: booking.id) do %>
+                  <div class="loc-pos"><%= booking.source%></div>
+                  <div class="loc-pos"><%= booking.destination%></div>
+                  <button class="btn btn-danger btn-del" type="button">&times;</button>
+                <%end%>  
+              </li>
+            <%end%>  
+            </div>
+        </div>
+        <div class="col-xs-7">
+          <ul class="list-inline order-label-heading">
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                CBM
+              </span>
+              <span class="ol-val">
+                <%= @draft_booking.cbm%>
+              </span>
+            </li>
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                Weight
+              </span>
+              <span class="ol-val">
+                <%= @draft_booking.cbm%>kg
+              </span>
+            </li>
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                Date
+              </span>
+              <span class="ol-val">
+                <%= @draft_booking.pick_up_date %>
+              </span>
+            </li>
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                Min
+              </span>
+              <span class="ol-val">
+                $57
+              </span>
+            </li>
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                Average
+              </span>
+              <span class="ol-val">
+                25
+              </span>
+            </li>
+            <li class="col-xs-2">
+              <span class="ol-lab">
+                Fastest
+              </span>
+              <span class="ol-val">
+                22
+              </span>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xs-3">
+          <ul class="list-inline order-sort">
+              <li class="col-xs-6"><button type="button" class="btn btn-sm btn-block btn-warning" title="Download" data-toggle="tooltip" data-placement="top">Download</button></li>
+              <li class="col-xs-6"><button type="button" class="btn btn-sm btn-block btn-warning" title="Eligible for Discount" data-toggle="tooltip" data-placement="top">With Discount</button></li>
+              <li class="col-xs-6"><button type="button" class="btn btn-sm btn-block btn-warning" title="Total Minutes" data-toggle="tooltip" data-placement="top">Total Minutes</button></li>
+              <li class="col-xs-6"><button type="button" class="btn btn-sm btn-block btn-warning" title="Total Fastest" data-toggle="tooltip" data-placement="top">Total Fastest</button></li>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <div class="result-content seperator-25">
+    <div class="row">
+      <div class="col-xs-9 col-xs-offset-1">
+        <div class="rlist-wrapper">
+          <ul class="rlist-headings">
+            <li>&nbsp;</li>
+            <li>Ratings</li>
+            <li>Cut Offs</li>
+            <li>Delivery</li>
+            <li>Days</li>
+            <li>All - in Price</li>
+            <li>&nbsp;</li>
+          </ul>
+
+          <% @freight_rates.each do |freight_rate|%>
+            <div class="result-item">
+              <div class="rb-item rb-name"><img src="/assets/dhl.png" alt="DHL"></div>
+              <div class="rb-item rb-rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> (10)</div>
+              <div class="rb-item rb-coff"><%= freight_rate.cut_off_date.strftime("%-d, %b")%></div>
+              <div class="rb-item rb-del"><%= delivery_date(freight_rate).strftime("%-d, %b")%></div>
+              <div class="rb-item rb-day"><%= freight_rate.transition_days%></div>
+              <div class="rb-item rb-aip">US $<%= freight_rate.price %></div>
+              <div class="rb-item rb-buk">
+                <button style="display: <%= is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success selected" id = "selected_freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="remove_from_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Selected</button>
+
+                <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
+              </div>
+            </div>
+          <%end%>
+        </div>
+      </div>
+      <div class="col-xs-2">
+        
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="form-group text-center">
+          <button type="button" class="btn btn-primary">Book Now</button>
+          <button type="button" class="btn btn-default pull-right">View Summary</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
