--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,17 @@
 <body class="air-bg">
   <%= render :partial => "layouts/header" %>
   <%= render :partial => "layouts/side_bar" %>
-  <%= yield %>
+  <div class="container-fluid">
+    <div class="right-body">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <%= yield %>
+          </div> 
+        </div> 
+      </div>  
+    </div>  
+  </div>    
   <%#= render partial: "layouts/footer"%>
 </body>
 </html>
